# discrete-informatics

./: CMakeLists.txt  main.cpp
model/: bit_vector.h  compressed_array.h  multi_branch_tree.h  multibranch_tree.h  sufficient_bv.h
util/: constant.h  type.h  util.h
